Next achievement panre added to the main stage